arregla controladores y agrega habitat
